# bids2datapackage

./: .coafile  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  environment.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
bids2datapackage/: config.py  main.py
bids2datapackage/cli/: base.py  cli.py
bids2datapackage/tests/: test_bids2datapackage.py
contrib/: bids2datapackage-complete.sh
docs/source/: conf.py  index.rst  installation.rst  usage.rst
