[metadata]
name = bids2datapackage
summary = Automatic creation of datapackage.json formatted according to https://frictionlessdata.io/specs/data-package/
description-file =
    README.rst
author = Chris Gorgolewski
author-email = krzysztof.gorgolewski@gmail.com
home-page = http://www.bids2datapackage.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
data_files =
  etc/bash_completion.d/ = contrib/bids2datapackage-complete.sh

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[entry_points]
console_scripts =
    bids2datapackage = bids2datapackage.cli.cli:cli

[pbr]
builder = html,text
skip_authors = True
skip_changelog = True
all_files = 1

[wheel]
universal = 0
